# c-project-planning-flaviuu9

./: CMakeLists.txt  command.txt  main_admin.cpp  main_user.cpp
data/: orders.json  vehicles.json
include/: Order.h  Stock.h  UserInterface.h  Utils.h  Vehicle.h  colors.h
src/: Order.cpp  Stock.cpp  UserInterface.cpp  Utils.cpp  Vehicle.cpp
